{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 25,
  "lineage": "70c7e1ed-60d5-50f9-b232-ea55f16de097",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/applied-polymer-413109/regions/asia-south1/instanceGroups/web-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-06-22T22:47:08.344-07:00",
            "enable_cdn": false,
            "fingerprint": "AmQeQdkKZoE=",
            "generated_id": 8440680439929611059,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/applied-polymer-413109/global/healthChecks/http-health-check"
            ],
            "id": "projects/applied-polymer-413109/global/backendServices/web-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-backend",
            "port_name": "http",
            "project": "applied-polymer-413109",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/applied-polymer-413109/global/backendServices/web-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_health_check.http_hc",
            "google_compute_instance_template.web_template",
            "google_compute_network.vpc",
            "google_compute_region_instance_group_manager.mig",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-06-22T22:44:18.849-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/applied-polymer-413109/global/firewalls/allow-health-check",
            "log_config": [],
            "name": "allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/applied-polymer-413109/global/networks/mig-lb-vpc",
            "priority": 1000,
            "project": "applied-polymer-413109",
            "self_link": "https://www.googleapis.com/compute/v1/projects/applied-polymer-413109/global/firewalls/allow-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-06-22T22:54:55.955-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/applied-polymer-413109/global/firewalls/web-mig-allow-http",
            "log_config": [],
            "name": "web-mig-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/applied-polymer-413109/global/networks/mig-lb-vpc",
            "priority": 1000,
            "project": "applied-polymer-413109",
            "self_link": "https://www.googleapis.com/compute/v1/projects/applied-polymer-413109/global/firewalls/web-mig-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "fr",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/applied-polymer-413109/global/forwardingRules/web-forwarding-rule",
            "ip_address": "34.8.223.80",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-forwarding-rule",
            "port_range": "80-80",
            "project": "applied-polymer-413109",
            "self_link": "https://www.googleapis.com/compute/v1/projects/applied-polymer-413109/global/forwardingRules/web-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/applied-polymer-413109/global/targetHttpProxies/web-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.backend",
            "google_compute_health_check.http_hc",
            "google_compute_instance_template.web_template",
            "google_compute_network.vpc",
            "google_compute_region_instance_group_manager.mig",
            "google_compute_subnetwork.subnet",
            "google_compute_target_http_proxy.proxy",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/applied-polymer-413109/global/networks/mig-lb-vpc",
            "mtu": 0,
            "name": "mig-lb-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4517833899343586249",
            "project": "applied-polymer-413109",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/applied-polymer-413109/global/networks/mig-lb-vpc"
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-06-22T22:44:19.839-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/applied-polymer-413109/regions/asia-south1/subnetworks/mig-lb-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "mig-lb-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/applied-polymer-413109/global/networks/mig-lb-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "applied-polymer-413109",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/applied-polymer-413109/regions/asia-south1/subnetworks/mig-lb-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-06-22T22:49:29.900-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/applied-polymer-413109/global/targetHttpProxies/web-proxy",
            "name": "web-proxy",
            "project": "applied-polymer-413109",
            "proxy_bind": false,
            "proxy_id": 963239160386658438,
            "self_link": "https://www.googleapis.com/compute/v1/projects/applied-polymer-413109/global/targetHttpProxies/web-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/applied-polymer-413109/global/urlMaps/web-url-map"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.backend",
            "google_compute_health_check.http_hc",
            "google_compute_instance_template.web_template",
            "google_compute_network.vpc",
            "google_compute_region_instance_group_manager.mig",
            "google_compute_subnetwork.subnet",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-06-22T22:49:17.171-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/applied-polymer-413109/global/backendServices/web-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "kqPZ3HD5gFw=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/applied-polymer-413109/global/urlMaps/web-url-map",
            "map_id": 4515547988899635378,
            "name": "web-url-map",
            "path_matcher": [],
            "project": "applied-polymer-413109",
            "self_link": "https://www.googleapis.com/compute/v1/projects/applied-polymer-413109/global/urlMaps/web-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.backend",
            "google_compute_health_check.http_hc",
            "google_compute_instance_template.web_template",
            "google_compute_network.vpc",
            "google_compute_region_instance_group_manager.mig",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    }
  ]
}